--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "author": "Leonardo Paixão",
   "license": "ISC",
   "dependencies": {
-    "@wdio/cli": "^8.21.0"
+    "@wdio/cli": "^8.21.0",
+    "webdriverio": "^8.22.1"
   },
   "devDependencies": {
     "@wdio/appium-service": "^8.21.0",
