--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "ci": "npm ci",
     "start": "appium",
-    "test": "npx wdio",
-    "wdio": "wdio run ./wdio.conf.js"
+    "test": "wdio run ./wdio.conf.js"
   },
   "author": "Leonardo Paixão",
   "license": "ISC",
@@ -16,6 +15,10 @@
     "webdriverio": "^8.22.1"
   },
   "devDependencies": {
+    "@babel/cli": "^7.23.0",
+    "@babel/core": "^7.23.2",
+    "@babel/preset-env": "^7.23.2",
+    "@babel/register": "^7.22.15",
     "@wdio/appium-service": "^8.21.0",
     "@wdio/local-runner": "^8.21.0",
     "@wdio/mocha-framework": "^8.21.0",
