(Teste simples de click)

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mobilebusiness_test",
+  "name": "appium-basics",
   "version": "1.0.0",
   "description": "Project create for Studying Framework Appium with JS",
   "main": "index.js",
