(resolucao do problema)

--- a/.appiumrc.json
+++ b/.appiumrc.json
@@ -6,7 +6,7 @@
         "default-capabilities": {
             "platformName": "Android",
             "appium:platformVersion": "13",
-            "appium:deviceName": "Pixel 7 Pro API 33",
+            "appium:deviceName": "AppiumAVD",
             "appium:automationName": "UiAutomator2",
             "appium:appPackage": "com.wdiodemoapp",
             "appium:appActivity": "com.wdiodemoapp.MainActivity"
