--- a/.appiumrc.json
+++ b/.appiumrc.json
@@ -9,7 +9,8 @@
             "appium:deviceName": "AppiumAVD",
             "appium:automationName": "UiAutomator2",
             "appium:appPackage": "com.wdiodemoapp",
-            "appium:appActivity": "com.wdiodemoapp.MainActivity"
+            "appium:appActivity": "com.wdiodemoapp.MainActivity",
+            "appium:disableIdLocatorAutocompletion": "true"
           },
           "keep-alive-timeout": 600,
           "local-timezone": true,
