--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "ci": "npm ci",
     "start": "appium",
-    "test": "wdio run ./wdio.conf.js"
+    "test": "wdio run ./wdio.conf.js --spec"
   },
   "author": "Leonardo Paixão",
   "license": "ISC",
@@ -19,7 +19,6 @@
     "@babel/core": "^7.23.2",
     "@babel/preset-env": "^7.23.2",
     "@babel/register": "^7.22.15",
-    "@wdio/appium-service": "^8.21.0",
     "@wdio/local-runner": "^8.21.0",
     "@wdio/mocha-framework": "^8.21.0",
     "@wdio/spec-reporter": "^8.21.0",
