--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "ci": "npm ci",
-    "start": "appium",
+    "start": "appium --config .appiumrc.json",
     "test": "wdio run ./wdio.conf.js --spec"
   },
   "author": "Leonardo Paixão",
@@ -15,11 +15,15 @@
     "webdriverio": "^8.21.0"
   },
   "devDependencies": {
+    "@appium/images-plugin": "^2.1.7",
     "@babel/cli": "^7.23.0",
     "@babel/core": "^7.23.2",
+    "@wdio/appium-service": "^8.21.0",
     "@wdio/local-runner": "^8.21.0",
     "@wdio/mocha-framework": "^8.21.0",
     "@wdio/spec-reporter": "^8.21.0",
+    "appium": "^2.2.2",
+    "appium-uiautomator2-driver": "^2.34.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   }
