(Teste funcional de swipe na aplicacao)

--- a/.appiumrc.json
+++ b/.appiumrc.json
@@ -16,6 +16,6 @@
           "log-level": "info",
           "no-perms-check": true,
           "use-drivers": ["UiAutomator2"],
-          "use-plugins": ["images"]
+          "use-plugins": ["images", "gestures"]
     }
 }
