--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,14 +34,11 @@ jobs:
       run: |
         chmod +x ./scripts/appium-server.sh
         ./scripts/appium-server.sh
-        sudo groupadd -r kvm
+
         sudo gpasswd -a $USER kvm
 
-    - name: Run Appium Tests
-      uses: reactivecircus/android-emulator-runner@v2
-      with:
-        api-level: ${{ matrix.api-level }}
-        target: ${{ matrix.target }}
-        arch: x86_64
-        emulator-options: -no-window -gpu swiftshader_indirect -no-snapshot -noaudio -no-boot-anim
-        script: npm test
+    - name: Install Dependencies
+      run: npm install
+
+    - name: Run WebdriverIO Tests
+      run: npm test
