(Teste CI/CD #11)

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,8 @@ jobs:
     strategy:
       matrix:
         node-version: [18]
+        api-level: [33]
+        target: [default]
 
     steps:
     - name: Checkout
@@ -34,4 +36,10 @@ jobs:
         ./scripts/appium-server.sh
 
     - name: Run Appium Tests
-      run: npm test
+      uses: reactivecircus/android-emulator-runner@v2
+      with:
+        api-level: ${{ matrix.api-level }}
+        target: ${{ matrix.target }}
+        arch: x86_64
+        emulator-options: -no-window -gpu swiftshader_indirect -no-snapshot -noaudio -no-boot-anim
+        script: npm test
