--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,4 +39,6 @@ jobs:
       run: sleep 5  # Aguarde alguns segundos para o Appium iniciar completamente
 
     - name: Run Appium Tests
-      run: npx wdio run ./wdio.conf.js --spec
+      run: |
+        chmod +x ./scripts/appium-tests.sh
+        ./scripts/appium-tests.sh
