(Teste CI/CD #18)

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,6 +39,11 @@ jobs:
       run: sleep 5  # Aguarde alguns segundos para o Appium iniciar completamente
 
     - name: Run Appium Tests
-      run: |
-        chmod +x ./scripts/appium-tests.sh
-        ./scripts/appium-tests.sh
+      uses: reactivecircus/android-emulator-runner@v2
+      with:
+        api-level: ${{ matrix.api-level }}
+        target: ${{ matrix.target }}
+        arch: x86_64
+        emulator-options: -no-window -gpu swiftshader_indirect -no-snapshot -noaudio -no-boot-anim
+        script: chmod +x ./scripts/appium-tests.sh
+                ./scripts/appium-tests.sh
