--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,6 +38,9 @@ jobs:
     - name: Wait for Appium to Start
       run: sleep 5  # Aguarde alguns segundos para o Appium iniciar completamente
 
+    - name: Install ADB
+      run: sudo apt install adb
+
     - name: Run Appium Tests
       uses: reactivecircus/android-emulator-runner@v2
       with:
