--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@wdio/mocha-framework": "^8.21.0",
     "@wdio/spec-reporter": "^8.21.0",
     "appium": "^2.2.2",
+    "appium-adb": "^11.0.8",
     "appium-gestures-plugin": "^3.0.0",
     "appium-uiautomator2-driver": "^2.34.1",
     "ts-node": "^10.9.1",
