--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,9 @@ jobs:
     - name: Install ADB
       run: sudo apt install adb
 
+    - name: Check ADB Version
+      run: adb version
+
     - name: Install and Run Appium Server
       run: |
         chmod +x ./scripts/appium-server.sh
@@ -41,12 +44,25 @@ jobs:
     - name: Wait for Appium to Start
       run: sleep 5  # Aguarde alguns segundos para o Appium iniciar completamente
 
-    - name: Run Appium Tests
-      uses: reactivecircus/android-emulator-runner@v2
+    - name: Start Emulator
+      uses: reactivecircus/android-emulator-runner@v2.27.0
       with:
         api-level: ${{ matrix.api-level }}
         target: ${{ matrix.target }}
         arch: x86_64
+        ram-size: 4096M
+        heap-size: 1024M
         emulator-options: -no-window -gpu swiftshader_indirect -no-snapshot -noaudio -no-boot-anim
         script: chmod +x ./scripts/appium-tests.sh
                 ./scripts/appium-tests.sh
+
+    - name: Wait for Emulator to Start
+      run: adb wait-for-device shell 'while [[ -z $(getprop sys.boot_completed) ]]; do sleep 1; done'
+
+    - name: List Devices
+      run: adb devices
+
+    - name: Run Tests Appium
+      run: |
+        chmod +x ./scripts/appium-tests.sh
+        ./scripts/appium-tests.sh
