--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,7 @@ jobs:
       run: |
         npm install
         sudo apt install adb
+        sudo adb kill-server
         sudo adb start-server
 
     - name: Install and Run Appium Server
@@ -40,6 +41,9 @@ jobs:
 
     - name: Wait for Appium to Start
       run: sleep 5  # Aguarde alguns segundos para o Appium iniciar completamente
+
+    - name: Wait for Emulator to Start
+      run: adb wait-for-device shell 'while [[ -z $(getprop sys.boot_completed) ]]; do sleep 1; done'
 
     - name: Start Emulator
       uses: reactivecircus/android-emulator-runner@v2.27.0
