--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,8 @@ jobs:
         ram-size: 4096M
         heap-size: 1024M
         emulator-options: -no-window -gpu swiftshader_indirect -no-snapshot -noaudio -no-boot-anim
-        script:
+        script: chmod +x ./scripts/tests.sh
+                ./scripts/tests.sh
 
     - name: Wait for Emulator to Fully Start
       run: adb wait-for-device shell 'while [[ -z $(getprop sys.boot_completed) ]]; do sleep 1; done'
