--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,9 @@ name: Appium Run CI
 
 on:
   push:
-    branches: [ "lp/apredendendo-CI/CD" ]
+    branches: ["lp/aprendendo-CI/CD"]
   pull_request:
-    branches: [ "lp/apredendendo-CI/CD" ]
+    branches: ["lp/aprendendo-CI/CD"]
 
 jobs:
   build:
@@ -17,48 +17,41 @@ jobs:
         target: [default]
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
 
-    - name: Set up Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
+      - name: Set up Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
 
-    - name: Install Dependencies
-      run: |
-        npm install
-        sudo apt install adb
-        sudo adb start-server  # Inicia o servidor ADB
+      - name: Install Dependencies
+        run: npm install
 
-    - name: Install and Run Appium Server
-      run: |
-        chmod +x ./scripts/appium-server.sh
-        ./scripts/appium-server.sh &
+      - name: Install and Run Appium Server
+        run: |
+          chmod +x ./scripts/appium-server.sh
+          ./scripts/appium-server.sh &
 
-    - name: Wait for Appium Server to Start
-      run: sleep 5  # Aguarde alguns segundos para o Appium iniciar completamente
+      - name: Start Emulator
+        uses: reactivecircus/android-emulator-runner@v2.28.0
+        with:
+          api-level: ${{ matrix.api-level }}
+          target: ${{ matrix.target }}
+          arch: x86_64
+          ram-size: 4096M
+          heap-size: 1024M
+          emulator-options: -no-window -gpu swiftshader_indirect -no-snapshot -noaudio -no-boot-anim
+          script: chmod +x ./scripts/tests.sh && ./scripts/tests.sh
 
-    - name: Start Emulator
-      uses: reactivecircus/android-emulator-runner@v2.27.0
-      with:
-        api-level: ${{ matrix.api-level }}
-        target: ${{ matrix.target }}
-        arch: x86_64
-        ram-size: 4096M
-        heap-size: 1024M
-        emulator-options: -no-window -gpu swiftshader_indirect -no-snapshot -noaudio -no-boot-anim
-        script: chmod +x ./scripts/tests.sh
-                ./scripts/tests.sh
+      - name: Wait for Emulator to Fully Start
+        run: adb wait-for-device shell 'while [[ -z $(getprop sys.boot_completed) ]]; do sleep 1; done'
 
-    - name: Wait for Emulator to Fully Start
-      run: adb wait-for-device shell 'while [[ -z $(getprop sys.boot_completed) ]]; do sleep 1; done'
+      - name: Run Appium Tests
+        run: |
+          chmod +x ./scripts/appium-tests.sh
+          ./scripts/appium-tests.sh
 
-    - name: Clean Emulator State
-      run: adb emu kill
-
-    - name: Run Appium Tests
-      run: |
-        chmod +x ./scripts/appium-tests.sh
-        ./scripts/appium-tests.sh
+      - name: Clean Emulator State
+        run: adb emu kill
