--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,11 @@ jobs:
           chmod +x ./scripts/appium-server.sh
           ./scripts/appium-server.sh &
 
+      - name: Wait for Appium Server and add user to group KVM
+        run: |
+          sleep 10
+          sudo gpasswd -a $USER kvm
+
       - name: Start Emulator
         uses: reactivecircus/android-emulator-runner@v2.28.0
         with:
@@ -43,15 +48,7 @@ jobs:
           ram-size: 4096M
           heap-size: 1024M
           emulator-options: -no-window -gpu swiftshader_indirect -no-snapshot -noaudio -no-boot-anim
-          script: chmod +x ./scripts/tests.sh && ./scripts/tests.sh
-
-      - name: Wait for Emulator to Fully Start
-        run: adb wait-for-device shell 'while [[ -z $(getprop sys.boot_completed) ]]; do sleep 1; done'
-
-      - name: Run Appium Tests
-        run: |
-          chmod +x ./scripts/appium-tests.sh
-          ./scripts/appium-tests.sh
+          script: chmod +x ./scripts/appium-tests.sh && ./scripts/appium-tests.sh
 
       - name: Clean Emulator State
         run: adb emu kill
