--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,14 +30,10 @@ jobs:
         run: npm install
 
       - name: Install and Run Appium Server
-        run: |
-          chmod +x ./scripts/appium-server.sh
-          ./scripts/appium-server.sh &
+        run: chmod +x ./scripts/appium-server.sh && ./scripts/appium-server.sh &
 
       - name: Wait for Appium Server and add user to group KVM
-        run: |
-          sleep 10
-          sudo gpasswd -a $USER kvm
+        run: sleep 10 && sudo gpasswd -a $USER kvm
 
       - name: Start Emulator
         uses: reactivecircus/android-emulator-runner@v2.28.0
