--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,10 +30,14 @@ jobs:
         run: npm install
 
       - name: Install and Run Appium Server
-        run: chmod +x ./scripts/appium-server.sh && ./scripts/appium-server.sh &
+        run: |
+            chmod +x ./scripts/appium-server.sh
+            ./scripts/appium-server.sh &
 
       - name: Wait for Appium Server and add user to group KVM
-        run: sleep 10 && sudo gpasswd -a $USER kvm
+        run: |
+            sleep 10
+            sudo gpasswd -a $USER kvm
 
       - name: Start Emulator
         uses: reactivecircus/android-emulator-runner@v2.28.0
@@ -44,4 +48,6 @@ jobs:
           ram-size: 4096M
           heap-size: 1024M
           emulator-options: -no-window -gpu swiftshader_indirect -no-snapshot -noaudio -no-boot-anim
-          script: chmod +x ./scripts/appium-tests.sh && ./scripts/appium-tests.sh
+          script: |
+                chmod +x ./scripts/appium-tests.sh
+                ./scripts/appium-tests.sh
