--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,27 +27,20 @@ jobs:
         cache: 'npm'
 
     - name: Install Dependencies
-      run: |
-        npm install
-        adb kill-server || true  # Encerra o servidor ADB se estiver em execução
-        adb start-server  # Inicia o servidor ADB
-    - name: Restart ADB Server if Needed
-      run: adb start-server
-
-    - name: Clean Emulator State
-      run: adb emu kill
+      run: npm install
 
     - name: Install and Run Appium Server
       run: |
         chmod +x ./scripts/appium-server.sh
         ./scripts/appium-server.sh &
+
     - name: Wait for Appium to Start
-      run: sleep 10  # Aguarde alguns segundos para o Appium iniciar completamente
+      run: sleep 10
 
-    - name: Wait for Emulator to Start
-      run: adb wait-for-device shell 'while [[ -z $(getprop sys.boot_completed) ]]; do sleep 0; done'
+    - name: Add new user to group NVM
+      run: sudo gpasswd -a $USER kvm
 
-    - name: Start Emulator
+    - name: Run Appium Tests
       uses: reactivecircus/android-emulator-runner@v2.27.0
       with:
         api-level: ${{ matrix.api-level }}
@@ -56,15 +49,6 @@ jobs:
         ram-size: 4096M
         heap-size: 1024M
         emulator-options: -no-window -gpu swiftshader_indirect -no-snapshot -noaudio -no-boot-anim
-        script:
-
-    - name: Wait for Emulator to Fully Start
-      run: adb wait-for-device shell 'while [[ -z $(getprop sys.boot_completed) ]]; do sleep 1; done'
-
-    - name: Clean Emulator State Again (Optional)
-      run: adb emu kill
-
-    - name: Run Appium Tests
-      run: |
-        chmod +x ./scripts/appium-tests.sh
-        ./scripts/appium-tests.sh
+        script: |
+            chmod +x ./scripts/appium-tests.sh
+            ./scripts/appium-tests.sh
