--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,11 @@ jobs:
     - name: Wait for Appium to Start
       run: sleep 8
 
+    - name: Modify udev rules
+      run: |
+        echo 'KERNEL=="kvm", GROUP="kvm", MODE="0660"' | sudo tee -a /lib/udev/rules.d/50-udev-default.rules
+      shell: bash
+
     - name: Add new user to group KVM
       run: |
         sudo id $USER
