--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,20 +37,10 @@ jobs:
     - name: Wait for Appium to Start
       run: sleep 8
 
-    - name: Modify udev rules
-      run: |
-        echo 'KERNEL=="kvm", GROUP="kvm", MODE="0660"' | sudo tee -a /lib/udev/rules.d/50-udev-default.rules
-      shell: bash
-
     - name: Add new user to group KVM
       run: |
-        sudo id $USER
-        sudo grep kvm /etc/group
-        sudo cat /lib/udev/rules.d/50-udev-default.rules
-        sudo udevadm control --reload-rules
-        sudo ls -l /dev/kvm
-        sudo gpasswd -a runner kvm
-
+        sudo gpasswd -a runner -G kvm
+        sudo newgrp kvm
 
     - name: Run Appium Tests
       uses: reactivecircus/android-emulator-runner@v2.28.0
