--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,7 +52,12 @@ jobs:
         arch: x86_64
         ram-size: 4096M
         heap-size: 1024M
-        emulator-options: -no-window -gpu swiftshader_indirect -no-snapshot -noaudio -no-boot-anim
+        emulator-options: |
+          -no-window
+          -gpu swiftshader_indirect
+          -no-snapshot
+          -noaudio
+          -no-boot-anim
         script: |
-            chmod +x ./scripts/appium-tests.sh
-            ./scripts/appium-tests.sh
+          chmod +x ./scripts/appium-tests.sh
+          ./scripts/appium-tests.sh
