--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,6 +44,9 @@ jobs:
     - name: Wait for Appium to Start
       run: sleep 8
 
+    - name: export variables
+      run: export GITHUB_ACTIONS=true
+
     - name: Run Appium Tests
       uses: reactivecircus/android-emulator-runner@v2.28.0
       with:
