--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,13 +25,16 @@ jobs:
           uses: actions/setup-java@v3
           with:
             distribution: 'temurin'
-            java-version: 11
+            java-version: 18
 
         - name: Instalar dependências do projeto
           run: npm install
 
         - name: Configurar Android SDK
           run: chmod +x ./scripts/android-sdk.sh && ./scripts/android-sdk.sh
+
+        - name: Verificar a configuração
+          run: echo $ANDROID_HOME && echo $ANDROID_SDK_ROOT
 
         - name: Iniciar Appium Server
           run: chmod +x ./scripts/appium-server.sh && ./scripts/appium-server.sh
