--- a/.appiumrc.json
+++ b/.appiumrc.json
@@ -8,6 +8,7 @@
             "appium:platformVersion": "13",
             "appium:deviceName": "AppiumAVD",
             "appium:automationName": "UiAutomator2",
+            "appium:disableWindowAnimation": true,
             "appium:app": "./app/Android-NativeDemoApp-0.4.0.apk",
             "appium:appPackage": "com.wdiodemoapp",
             "appium:appActivity": "com.wdiodemoapp.MainActivity"
