--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,8 +50,11 @@ jobs:
           with:
             api-level: 33
             target: default
+            cores: 4
             arch: x86_64
+            sdcard-path-or-size: 1500M
             ram-size: 9128M
             heap-size: 2048M
-            disable-animations: false
+            disable-animations: true
+            disable-spellchecker: true
             script: npm test
