--- a/.env
+++ b/.env
@@ -1,4 +1,11 @@
+# Serviço
+APPIUM_SERVER= localhost
+PORT= 4723
+
 APP_PATH_GITHUB_ACTIONS= ./app/Android-NativeDemoApp-0.4.0.apk
-PLATFORM_VERSION=13.0
-DEVICE_NAME=AppiumAVD
-APPIUM_SERVER=http://localhost:4723/
+PLATFORM_VERSION= 13.0
+DEVICE_NAME= AppiumAVD
+
+# Tempo dos Comandos
+COMMAND_TIMEOUT_GITHUB= 600
+COMMAND_TIMEOUT= 240
