(Teste CI/CD com ENV #32)

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Serviço
-APPIUM_SERVER= localhost
+APPIUM_SERVER= local
 PORT= 4723
 
 APP_PATH_GITHUB_ACTIONS= ./app/Android-NativeDemoApp-0.4.0.apk
