(Configuracao completa para dois apps)

--- a/.appiumrc.json
+++ b/.appiumrc.json
@@ -7,9 +7,7 @@
             "platformName": "Android",
             "appium:platformVersion": "13",
             "appium:deviceName": "AppiumAVD",
-            "appium:automationName": "UiAutomator2",
-            "appium:appPackage": "com.wdiodemoapp",
-            "appium:appActivity": "com.wdiodemoapp.MainActivity"
+            "appium:automationName": "UiAutomator2"
           },
           "keep-alive-timeout": 600,
           "local-timezone": true,
