--- a/.editorconfig
+++ b/.editorconfig
@@ -6,6 +6,7 @@ root = true
 indent_style = space
 indent_size = 4
 
+sigle_quotes = false
 end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = true
