--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "ci": "npm ci",
     "start": "appium --config .appiumrc.json",
-    "test": "wdio run ./wdio.conf.js --spec",
+    "test:demoApp": " cross-env APP_ENV=demoApp wdio run ./wdio.conf.js --spec",
+    "test:apiDemos": "cross-env APP_ENV=apiDemos wdio run ./wdio.conf.js --spec",
     "relatory": "allure generate allure-results --clean",
     "relatory:open": "allure open"
   },
@@ -14,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "@wdio/cli": "^8.21.0",
+    "dotenv": "^16.3.1",
     "webdriverio": "^8.21.0"
   },
   "devDependencies": {
